--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: "San Francisco";
-  src: url('./fonts/san-francisco-pro.ttf') format('truetype');
-}
-  
-@font-face {
-  font-family: "San Francisco Mono";
-  src: url('./fonts/san-francisco-mono-regular.otf') format('truetype');
-}
-  
-@font-face {
-  font-family: "New York";
-  src: url('./fonts/new-york-medium-regular.otf') format('truetype');
-}
-  
 :root {
   --fa-primary-color: rgb(53, 167, 255);
 }
@@ -42,13 +27,13 @@ body {
 }
   
 #text {
-  font-family: "New York";
+  font-family: serif;
   text-align: center;
   font-size: 25px;
 }
   
 #author {
-  font-family: "San Francisco Mono";
+  font-family: serif;
   text-align: end;
 }
   
@@ -61,7 +46,7 @@ button {
   background-color: rgb(53, 167, 255);
   border: none;
   padding: 5px;
-  font-family: "San Francisco";
+  font-family: sans-serif;
   border-radius: 5px;
   color: white;
 }
